// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MUACard /> Should not render when unentitled 1`] = `
<h3
  class="pf-v5-c-title pf-m-xl"
  data-ouia-component-id="OUIA-Generated-Title-3"
  data-ouia-component-type="PF5/Title"
  data-ouia-safe="true"
>
  TestHeader
</h3>
`;

exports[`<MUACard /> Should render correctly if entitled 1`] = `
<h3
  class="pf-v5-c-title pf-m-xl"
  data-ouia-component-id="OUIA-Generated-Title-1"
  data-ouia-component-type="PF5/Title"
  data-ouia-safe="true"
>
  TestHeader
</h3>
`;

exports[`<MUACard /> Should render, but being disabled 1`] = `
<h3
  class="pf-v5-c-title pf-m-xl"
  data-ouia-component-id="OUIA-Generated-Title-2"
  data-ouia-component-type="PF5/Title"
  data-ouia-safe="true"
>
  TestHeader
</h3>
`;
